<resources>

    <string name="app_name">电梯小工具</string>
    <string name="menu_settings">Settings</string>
    
    <string name="title_activity_main">电梯小工具</string>
    <string name="title_activity_xian_su_qi">限速器</string>
    <string name="title_activity_up">顶部空间</string>
    <string name="title_activity_down">底坑空间</string>
    <string name="title_activity_up_and_down_zoom">顶部空间与底坑空间</string>
    <string name="title_activity_limit_switch">极限开关</string>
    <string name="title_activity_balance">平衡系数</string>
    <string name="title_activity_about">关于我们</string>
    
    
    <string name="XiaoYanZhi">校验值如下：</string>
    <string name="ms">m/s</string>
    <string name="mmin">m/min</string>
    <string name="up">上</string>
    <string name="down">下</string>
    
    <string name="tips_dont_null">不能为空</string>
    <string name="tips_dont_reason">数据不合理</string>
    <string name="app_exit_twoclick">再按一次退出程序</string>
    
    
    <item name="static_id_head_title" type="id" />
    <item name="static_id_head_finish" type="id" />
    

    

    <string-array name="saft">
        <item>普通瞬时式</item>
        <item>不可脱落滚柱瞬时式</item>
        <item>渐进式机械触发式</item>
    </string-array>
    <string-array name="protect">
        <item>机械触发式夹绳器</item>
        <item>电磁触发式夹绳器</item>
        <item>对重安全钳</item>
        <item>绳轮制动式</item>
    </string-array>

</resources>
